# openclaw-cws-publisher

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: local_extension_inventory.md  privacy-policy.md  publish-surface-scan.md  research.md  test-instructions.md
extension/: manifest.json  popup.css  popup.html  popup.js
marketing/: icon.html  marketing.css  marquee.html  promo.html  screenshot-focus.html  screenshot.html
skill/openclaw-cws-publisher/: SKILL.md
skill/openclaw-cws-publisher/agents/: openai.yaml
skill/openclaw-cws-publisher/scripts/: build_extension_zip.py  common.py  generate_launch_manifest.py  generate_listing_copy.py  generate_marketing_assets.py  inventory_local_extensions.py  openclaw_bridge.py  publish_extension.py  render_portfolio_entry.py  render_publish_commands.py  render_release_notes.py  run_agent.py  scan_publish_surface.py
tests/: test_inventory_and_audit.py  test_openclaw_bridge.py  test_release_kit.py
